# polaris

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/outline/: CHECKLISTS.md  SKILL.md  STYLE.md  TENRULES.md
.claude/skills/paper/: SKILL.md
.claude/skills/writeup/: SKILL.md
docs/decisions/: 001-overclustering-for-balanced-folds.md  002-optuna-hyperparameter-tuning.md  README.md
docs/paper/: analysis_checklist.md  outline.md
docs/paper/issues/: 001-dataset-exploration.md  002-ecfp-distance-exploration.md  003-chemical-space-analysis.md  004-target-distribution.md  005-cluster-split.md  006-time-split.md  007-target-split.md  008-split-quality.md  009-performance-distance.md  010-baseline-performance.md  011-iid-vs-ood-series.md  012-activity-cliff-eval.md  013-scaffold-vs-random.md  014-split-variance.md  015-molecular-variants.md  016-chembl-tanimoto-novelty.md  016-scaffold-boundary.md  021-resonance-variants.md
notebooks/: 0.01-seal-dataset-exploration.py  0.02-seal-ecfp-distance-exploration.py  0.03-araripe-chembl-tanimoto.py  1.01-seal-dataset-loader.py  2.01-seal-chemical-space-analysis.py  2.02-seal-target-distribution.py  2.03-seal-cluster-split.py  2.04-seal-time-split.py  2.05-seal-target-split.py  2.06-seal-split-quality.py  2.07-seal-performance-distance.py  2.08-seal-baseline-performance.py  2.09-seal-iid-vs-ood-series.py  2.10-seal-activity-cliff-eval.py  2.11-seal-scaffold-vs-random.py  2.12-seal-split-variance.py  2.13-seal-molecular-variants.py  2.14-zalte-resonance-generation.py  2.14-zalte-resonance-variants.py  2.15-araripe-scaffold-boundary.py  2.15-zalte-resonance-variants.py  2.16-araripe-scaffold-boundary.py  2.17-seal-distance-metric-comparison.py  3.02-seal-framework-figure.py  4.01-seal-cross-dataset-characterization.py  4.01-seal-results-dashboard.py
scripts/: combine.sh  download_data.sh  exploration.sh  train_chemeleon.sh  train_xgboost.sh
src/polaris_generalization/: chemprop_utils.py  config.py  tuning.py  visualization.py
