[project]
name = "polaris_generalization"
version = "0.1.0"
description = "Generalization evaluation framework for molecular ML"
authors = [{ name = "Srijit Seal" }]
license = { file = "LICENSE" }
requires-python = ">= 3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "loguru>=0.7",
    "typer>=0.12",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/polaris_generalization"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
polaris_generalization = { path = ".", editable = true }

[tool.pixi.dependencies]
python = "3.12.*"

[tool.pixi.tasks]
download = "bash scripts/download_data.sh"

# Feature: Cheminformatics (rdkit + pyarrow via conda, everything else from pypi)
[tool.pixi.feature.cheminformatics.dependencies]
rdkit = ">=2024.03"
pyarrow = ">=14"

[tool.pixi.environments]
lint = { features = ["lint"] }
test = { features = ["test"] }
cheminformatics = { features = ["cheminformatics"] }

[dependency-groups]
lint = ["ruff>=0.8.0"]
test = ["pytest>=8.0.0"]

[tool.ruff]
line-length = 120
src = ["src"]
target-version = "py312"
include = ["pyproject.toml", "src/**/*.py", "notebooks/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "W"]
ignore = [
    "E501", # Line too long (handled by formatter)
    "N803", # Argument name should be lowercase (ML convention: X, Y for matrices)
    "N806", # Variable in function should be lowercase (ML convention: X_train, X_test)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
